[fix] form alignment at different viewports

--- a/src/global.scss
+++ b/src/global.scss
@@ -52,6 +52,10 @@ header {
   align-items: center;
   padding: 0 1em 0;
   width: 100%;
+  height: calc(100vh - 8.4rem);
+}
+
+.wrapper-with-results {
   margin-top: 24rem;
 }
 
@@ -95,7 +99,6 @@ header {
     align-items: center;
     padding-left: 5em;
     gap: 0;
-    height: calc(100vh - 8.4rem);
     overflow: hidden;
   }
 
